# tmux-rs

./: .clang-format  .gitignore  .tokeignore  Cargo.toml  Justfile  Makefile.am  README.md  TESTING.md  arguments.c  broken.c  build-clean-nodebug.sh  build-clean.sh  build.rs  build.sh  client.c  cmd-bind-key.c  cmd-bind-key.c.bak  cmd-command-prompt.c  cmd-find.c  cmd-new-session.c  cmd-parse.c.bak  cmd-parse.y  cmd-queue.c  cmd-refresh-client.c  cmd-resize-pane.c  cmd-send-keys.c  cmd-source-file.c  compat.h  compile_commands.json  configure.ac  control.c  environ.c  file.c  flake.nix  foo.rs  format.c  image.c  key-string.c  layout-custom.c  layout.c  (+18 more)
.cargo/: config.toml
.config/: nextest.toml
alerts/: Cargo.toml
bsd-sys/: Cargo.toml  build.rs  wrapper.h
cmd_kill_server/: Cargo.toml
compat/: Cargo.toml  imsg-buffer.c  imsg.c  tree.h
compat/src/: b64.rs  closefrom.rs  fdforkpty.rs  getpeereid.rs  getprogname.rs  lib.rs  ntohll.rs  reallocarray.rs  recallocarray.rs  setproctitle.rs  strlcat.rs  strlcpy.rs  strtonum.rs  systemd.rs  unvis.rs  vis.rs
compat_derive/: Cargo.toml
compat_rs/: Cargo.toml
compat_rs/src/: fdforkpty.rs  freezero.rs  getdtablecount.rs  getopt.rs  getprogname.rs  htonll.rs  imsg.rs  imsg.rs.orig  imsg_buffer.rs  imsg_buffer.rs.orig  lib.rs  queue.rs  systemd.rs  tree.rs  unvis.rs  vis.c2rs  vis.rs
compat_rs/src/tree/: mod.rs  red_black.rs
data/: languages.json
docs/: index.md
event/: Cargo.toml  build.rs  out.rs  wrapper.h
event/src/: lib.rs
event/src/backend/: event_impl.rs  mod.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: attributes.rs  cmd_parse.rs  colour_fromstring.rs  format_expand.rs  input_parse.rs  key_string_lookup.rs  regsub.rs  sandbox.rs  style_parse.rs  utf8_decode.rs
grid/: Cargo.toml
grid/src/: attributes.rs  cell.rs  flags.rs  lib.rs  line.rs  reader.rs  test_support.rs
libevent-sys/: .cargo-checksum.json  Cargo.toml  build.rs
log/: Cargo.toml
log/src/: lib.rs
protocol/: Cargo.toml
regsub/: Cargo.toml
regsub/src/: lib.rs
scripts/: languages.py  languages.sh  unsafe.sh
server/: Cargo.toml
src/: alerts.rs  arguments.rs  attributes.rs  cfg_.rs  client_.rs  cmd_parse.lalrpop  cmd_parse.rs  colour.rs  control.rs  control_notify.rs  environ_.rs  evbuffer_.rs  event_.rs  file.rs  format.rs  format_draw_.rs  grid_.rs  grid_reader_.rs  grid_view.rs  hyperlinks_.rs  image_.rs  image_sixel.rs  input.rs  input_keys.rs  job_.rs  key_bindings_.rs  key_string.rs  keyc_mouse_key.rs  layout.rs  layout_custom.rs  layout_set.rs  lib.rs  libc.rs  libc_.rs  log.rs  main.rs  menu_.rs  mode_tree.rs  names.rs  ncurses_.rs  (+37 more)
tests/: buffers.rs  capture_pane.rs  client.rs  config.rs  control_mode.rs  copy_mode.rs  cursor.rs  environment.rs  format_strings.rs  harness.rs  input_keys.rs  key_bindings.rs  layout.rs  options.rs  pane.rs  pty_client.rs  session.rs  source_and_misc.rs  status_and_style.rs  style.rs  terminal.rs  tests.rs  timers.rs  utf8.rs  window.rs  window_management.rs
tmux-rs/: Cargo.toml  build.rs
tmux-rs/src/: alerts.rs  arguments.rs  attributes.rs  cfg_.rs  client_.rs  cmd_parse.lalrpop  cmd_parse.rs  colour.rs  control.rs  control_notify.rs  environ_.rs  event_.rs  file.rs  format.rs  format_draw_.rs  grid_.rs  grid_reader_.rs  grid_view.rs  hyperlinks_.rs  image_.rs  image_sixel.rs  input.rs  input_keys.rs  job_.rs  key_bindings_.rs  key_string.rs  layout.rs  layout_custom.rs  layout_set.rs  lib.rs  libc_.rs  log.rs  main.rs  menu_.rs  mode_tree.rs  names.rs  notify.rs  options_.rs  options_table.rs  osdep.rs  (+33 more)
tmux-rs/src/cmd_/: cmd_attach_session.rs  cmd_bind_key.rs  cmd_break_pane.rs  cmd_capture_pane.rs  cmd_choose_tree.rs  cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_copy_mode.rs  cmd_detach_client.rs  cmd_display_menu.rs  cmd_display_message.rs  cmd_display_panes.rs  cmd_find.rs  cmd_find_window.rs  cmd_if_shell.rs  cmd_join_pane.rs  cmd_kill_pane.rs  cmd_kill_server.rs  cmd_kill_session.rs  cmd_kill_window.rs  cmd_list_buffers.rs  cmd_list_clients.rs  cmd_list_keys.rs  cmd_list_panes.rs  cmd_list_sessions.rs  cmd_list_windows.rs  cmd_load_buffer.rs  cmd_lock_server.rs  cmd_move_window.rs  cmd_new_session.rs  cmd_new_window.rs  cmd_parse.rs  cmd_paste_buffer.rs  cmd_pipe_pane.rs  cmd_queue.rs  cmd_refresh_client.rs  cmd_rename_session.rs  cmd_rename_window.rs  cmd_resize_pane.rs  cmd_resize_window.rs  (+25 more)
tmux-rs/src/compat/: b64.rs  fdforkpty.rs  getprogname.rs  imsg.rs  imsg_buffer.rs  mod.rs  queue.rs  tree.rs
tmux_h/: Cargo.toml
tmux_h/src/: keyc_mouse_key.rs  lib.rs  log.rs  server.rs  utempter.rs  window.rs  window_copy.rs
tmux_rs/: Cargo.toml
tmux_rs/src/: alerts.rs  arguments.rs  attributes.rs  cfg_.rs  client_.rs  cmd_.rs  cmd_find.rs  cmd_kill_server.rs  cmd_queue.rs  colour.rs  control.rs  control_notify.rs  environ_.rs  event_.rs  file.rs  format.rs  grid_.rs  grid_reader_.rs  grid_view.rs  hyperlinks_.rs  input.rs  job_.rs  key_string.rs  keyc_mouse_key.rs  layout.rs  layout_custom.rs  layout_set.rs  lib.rs  libc_.rs  log.rs  menu_.rs  names.rs  ncurses_.rs  notify.rs  options_.rs  options_table.rs  osdep.rs  paste.rs  proc.rs  regsub.rs  (+26 more)
tmux_rs/src/cmd_/: cmd_attach_session.rs  cmd_bind_key.rs  cmd_break_pane.rs  cmd_capture_pane.rs  cmd_choose_tree.rs  cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_copy_mode.rs  cmd_detach_client.rs  cmd_display_menu.rs  cmd_display_message.rs  cmd_display_panes.rs  cmd_join_pane.rs  cmd_kill_server.rs  cmd_kill_session.rs  cmd_kill_window.rs  cmd_list_keys.rs  cmd_list_panes.rs  cmd_list_windows.rs  cmd_load_buffer.rs  cmd_lock_server.rs  cmd_move_window.rs  cmd_new_session.rs  cmd_new_window.rs  cmd_parse.rs  cmd_paste_buffer.rs  cmd_pipe_pane.rs  cmd_queue.rs  cmd_refresh_client.rs  cmd_rename_window.rs  cmd_resize_pane.rs  cmd_resize_window.rs  cmd_respawn_pane.rs  cmd_respawn_window.rs  cmd_run_shell.rs  cmd_save_buffer.rs  cmd_select_layout.rs  cmd_select_pane.rs  cmd_send_keys.rs  cmd_set_environment.rs  (+9 more)
utf8/: Cargo.toml
utf8/src/: data.rs  lib.rs
window/: Cargo.toml
window/src/: lib.rs
(+119 files in other folders)
