[package]
name = "tmux-rs"
version = "0.1.0"
edition = "2024"

[profile.dev]
# debug-assertions = false
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[dependencies]
bitflags     = { version = "2.6.0"   }
lalrpop-util = { version = "0.21.0", default-features = false, features = ["lexer", "unicode"] }
libc         = { version = "0.2.169" }
num_enum     = { version = "0.7.3"   }
paste        = { version = "1.0.15"  }

[build-dependencies]
lalrpop      = { version = "0.22.1", default-features = false  }

[features]
cgroups     = []
hyperlinks  = []
iutf8       = []
ncurses     = []
nokerninfo  = []
sixel       = []
sys_signame = []
systemd     = []
utempter    = []
utf8proc    = []
