[package]
name = "tmux-rs"
version = "0.0.1"
edition = "2024"
authors = ["Collin Richards"]
repository = "https://github.com/richardscollin/tmux-rs"
description = "A Rust port of tmux"
license = "ISC"

[profile.dev]
# debug-assertions = false
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[dependencies]
bitflags     = { version = "2.9.1" }
lalrpop-util = { version = "0.22.2", default-features = false, features = ["lexer", "unicode"] }
libc         = { version = "0.2.173" }
num_enum     = { version = "0.7.3"   }
paste        = { version = "1.0.15"  }

[build-dependencies]
lalrpop      = { version = "0.22.2", default-features = false  }

[features]
cgroups     = []
hyperlinks  = []
iutf8       = []
ncurses     = []
nokerninfo  = []
sixel       = []
sys_signame = []
systemd     = []
utempter    = []
utf8proc    = []
