[package]
name = "compat_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bsd-sys          = { path = "../bsd-sys" }
compat_derive    = { path = "../compat_derive" }

libc             = "0.2"
libevent-sys     = "=0.3.0"
log              = "0.4.22"
paste            = "1.0.15"

[lints]
workspace = true
