[package]
name = "compat_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bsd-sys          = { path = "../bsd-sys" }
compat_derive    = { path = "../compat_derive" }

libc             = { workspace = true }
libevent-sys     = "=0.3.0"
paste            = { workspace = true }

[lints]
workspace = true
