[package]
name = "tmux-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = { version = "0.4.10" }

# fuzz two different versions. these may need to be manually tweeked
tmux-rs-new = { path = "..", package = "tmux-rs" }
tmux-rs-old = { git = "https://github.com/richardscollin/tmux-rs", package = "tmux-rs", branch = "main" }
# tmux-rs-old = { path = "../../tmux-rs-old", package = "tmux-rs-old" }

[[bin]]
name = "colour_find_rgb"
path = "fuzz_targets/colour_find_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "style_parse"
path = "fuzz_targets/style_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "key_string_lookup"
path = "fuzz_targets/key_string_lookup.rs"
test = false
doc = false
bench = false

[[bin]]
name = "colour_fromstring"
path = "fuzz_targets/colour_fromstring.rs"
test = false
doc = false
bench = false
