[package]
name        = "tmux-log"
version     = "0.0.3"
edition     = "2024"
license     = "ISC"
description = "File-backed logging facade used by tmux-rs"
publish     = false

[dependencies]
libc        = { version = "0.2" }
log         = { version = "0.4" }
tmux-compat = { path = "../compat" }

[dev-dependencies]
tempfile    = { version = "3.27.0" }
