[package]
name        = "tmux-regsub"
version     = "0.0.3"
edition     = "2024"
license     = "ISC"
description = "Regex-based string substitution (like sed s/pat/repl/), used by tmux-rs"
publish     = false

[dependencies]
libc = { version = "0.2" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
