[package]
name = "tmux-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags     = { workspace = true }
compat_rs    = { workspace = true }
libc         = { workspace = true }
paste        = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[features]
cgroups     = []
hyperlinks  = []
iutf8       = []
ncurses     = []
nokerninfo  = []
sixel       = []
sys_signame = []
systemd     = []
utempter    = []
utf8proc    = []

# [lints]
# workspace = true

