[package]
name = "tmux-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags     = { workspace = true }
compat_rs    = { workspace = true }
libc         = { workspace = true }
paste        = { workspace = true }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
num_enum = "0.7.3"

[build-dependencies]
cc = { workspace = true }
lalrpop = "0.22.1"

[features]
cgroups     = []
hyperlinks  = []
iutf8       = []
ncurses     = []
nokerninfo  = []
sixel       = []
sys_signame = []
systemd     = []
utempter    = []
utf8proc    = []

# [lints]
# workspace = true

