[package]
name = "tmux_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
compat_rs    = { workspace = true }
libc         = { workspace = true }
libevent-sys = { workspace = true }
paste        = { workspace = true }

[features]
systemd = []
sixel = []
utempter = []
sys_signame = []
nokerninfo = []

[lints]
workspace = true
