[package]
name = "tmux_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
compat_rs    = { workspace = true }
libc         = { workspace = true }
libevent-sys = { workspace = true }
paste        = { workspace = true }

[features]
ncurses = []
nokerninfo = []
sixel = []
sys_signame = []
systemd = []
utempter = []
utf8proc = []

[lints]
workspace = true
