[package]
name = "tmux_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
bitflags     = { workspace = true }
compat_rs    = { workspace = true }
event        = { workspace = true }
libc         = { workspace = true }
paste        = { workspace = true }

[features]
cgroups     = []
iutf8       = []
ncurses     = []
nokerninfo  = []
sixel       = []
sys_signame = []
systemd     = []
utempter    = []
utf8proc    = []

[lints]
workspace = true
